--- a/eurotherm2kApp/src/Makefile
+++ b/eurotherm2kApp/src/Makefile
@@ -1,24 +1,22 @@
 TOP=../..
-
 include $(TOP)/configure/CONFIG
+#=======================================
 
-# -------------------------------
-# Build an Diamond Support Module
-# -------------------------------
+LIBRARY_IOC += EurothermSup
 
-#LIBRARY_IOC += xxx
+EurothermSup_DBD += asyn.dbd
+EurothermSup_DBD += utilities.dbd
+EurothermSup_DBD += asubFunctions.dbd
+EurothermSup_DBD += asSupport.dbd
+EurothermSup_DBD += stream.dbd
+EurothermSup_DBD += sseqRecord.dbd
+EurothermSup_DBD += get_units.dbd
 
-# xxxRecord.h will be created from xxxRecord.dbd
-#DBDINC += xxx.h
+EurothermSup_LIBS += $(EPICS_BASE_IOC_LIBS)
+EurothermSup_LIBS += asyn utilities
+EurothermSup_LIBS += asubFunctions
 
-# xxxRecord.dbd will be installed into <top>/dbd
-#DBD += xxx.dbd
+EurothermSup_SRCS += get_units_impl.cpp get_units.c
 
-# The following are compiled and added to the support library
-#xxx_SRCS += xxxCodeA.c
-#xxx_SRCS += xxxCodeB.c
-
-# We need to link against the EPICS Base libraries
-#xxx_LIBS += $(EPICS_BASE_IOC_LIBS)
-
+#=======================================
 include $(TOP)/configure/RULES
