--- a/eurotherm2kApp/src/Makefile
+++ b/eurotherm2kApp/src/Makefile
@@ -2,14 +2,14 @@ TOP=../..
 include $(TOP)/configure/CONFIG
 #=======================================
 
+DBD += EurothermSup.dbd
+
 LIBRARY_IOC += EurothermSup
 
-EurothermSup_DBD += asyn.dbd
-EurothermSup_DBD += utilities.dbd
+# EurothermSup_DBD += asyn.dbd
+# EurothermSup_DBD += utilities.dbd
+
 EurothermSup_DBD += asubFunctions.dbd
-EurothermSup_DBD += asSupport.dbd
-EurothermSup_DBD += stream.dbd
-EurothermSup_DBD += sseqRecord.dbd
 EurothermSup_DBD += get_units.dbd
 
 EurothermSup_LIBS += $(EPICS_BASE_IOC_LIBS)
